Arreglo de migraciones (#11)
* Borrar tablas que ya no que consideran en el modelo base de accesos
* Actualización de los datos en los seeders por defecto.
* Control de que no se vuelva a generar las migraciones al momento de crear un inquilino con una base de datos
  que ya existe.
